src/scss/main.scss
/* ... */
.navContainerWrapper {
    position: fixed;
}

.projects-section {
    display: flex;
    justify-content: center;

    .projects-card {
        position: relative;
        width: 100%;
        //max-width: 1200px;
        overflow: hidden;
        cursor: pointer;
        font-weight: bold;

        .projects-preview-grid {
            display: grid;
            grid-template-columns: 1fr 1fr;

            img {
                width: 100%;
                height: 330px;
                object-fit: cover;
                display: block;
                transition: transform 0.4s ease;
            }
        }

        .projects-card-label {
            position: absolute;
            inset: 0;
            display: flex;
            align-items: center;
            justify-content: center;
            font-size: 12vw;
            color: $tertiary-color;
        }

        &:hover .projects-preview-grid img {
            transform: scale(1.05);
        }
    }
}

.reels-section {
    display: flex;
    gap: 2em;
    justify-content: center;
    //padding: 4em 2em;
    flex-wrap: wrap;

    .reel-card {
        position: relative;
        flex: 1;
        min-width: 280px;
        max-width: 600px;
        overflow: hidden;
        cursor: pointer;
        font-weight: bold;

        img {
            width: 100%;
            display: block;
            transition: transform 0.4s ease;
        }

        .reel-card-label {
            position: absolute;
            bottom: 0;
            left: 0;
            background-color: $secondary-color;
            color: $main-color;
            padding: 2px;
        }

        &:hover img {
            transform: scale(1.05);
        }
    }
}

.experimentContainer {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.loaderContainer {
    position: fixed;
    top: calc(50% - 5px);
    left: calc(50% - 100px);
    width: 200px;
    z-index: 9999;
}
#loader-track {
    height: 10px;
    background: rgba(183, 255, 0, 0.1);
    border-radius: 999px;
    overflow: hidden;
}
#loader-ui {
    height: 100%;
    width: 0%;
    background: linear-gradient(
        90deg,
        rgb(68, 1, 84),
        rgb(59, 82, 139),
        rgb(33, 145, 140),
        rgb(94, 201, 98),
        rgb(253, 231, 37)
    );
    transition: width 0.2s ease;
}
#loader-percent {
    color: $tertiary-color;
    text-align: center;
    margin-top: 8px;
}

